Updated Card class

--- a/S16205Activity5/.project
+++ b/S16205Activity5/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>S16205Activity5</name>
+	<name>Activity5HandofCards</name>
 	<comment></comment>
 	<projects>
 	</projects>
