--- a/Activity5Code/.project
+++ b/Activity5Code/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Activity5Code</name>
+	<name>Project5Code</name>
 	<comment></comment>
 	<projects>
 	</projects>
